# langtag

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl  cliff.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
automata/: extlang.aut.cbor  langtag.aut.cbor  language.aut.cbor  normal.aut.cbor  private-use.aut.cbor
src/: as_ref.rs  error.rs  extension.rs  grammar.abnf  grammar.rs  grandfathered.rs  langtag.rs  language.rs  lib.rs  parse.rs  private_use.rs  privateuse.rs  privateusetag.rs  raw.rs  utils.rs  variant.rs
src/normal/: extension.rs  mod.rs  private_use.rs  region.rs  script.rs  variant.rs
src/normal/language/: extlang.rs  mod.rs  primary.rs
tests/: extension.rs  langtag.rs  language.rs  lib.rs  privateuse.rs  variant.rs
