[package]
name = "langtag"
version = "0.2.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2018"
categories = ["parsing", "data-structures"]
keywords = ["language", "tag", "langtag", "rfc"]
description = "Language tags implementation following RFC 5646"
repository = "https://github.com/timothee-haudebourg/langtag"
documentation = "https://docs.rs/langtag"
license = "MIT/Apache-2.0"
readme = "README.md"